# UBB-Projects

./: LICENCE  ReadMe.md
2nd Semester/Algoritmica Grafurilor/Algoritmi/: main.cpp
3rd Semester/BD - Baze de Date/Lab1/: AfisareTabele.sql  FirmaDeTransport.sql  PopulareCuDate_Lab1.sql
3rd Semester/BD - Baze de Date/Lab2/: Interogari.sql
3rd Semester/BD - Baze de Date/Lab3/: CreareTabeleVersiuni.sql
3rd Semester/BD - Baze de Date/Lab4/: ExecutareaTestelor_Lab4.sql  PopulareaTabelelorTeste.sql
3rd Semester/Retele de Calculatoare/Curs/: Lecture_1.ppt
4th Semester/: Descriere textuala.docx  Monitorizare Angajati.mdj
4th Semester/AI - Inteligenta Artificiala/Lab 1/: Lab1_AI.ipynb
5th Semester/MIRPR - Metode Inteligente de Rezolvare a Problemelor Reale/: ReadMe.md
5th Semester/PPD - Programare Paralela si Distribuita/Lab/Lab1/Lab1_C++/: CMakeLists.txt  main.cpp
5th Semester/PPD - Programare Paralela si Distribuita/Lab/Lab1/Lab1_C++/Header/: WriterAndReader.h
5th Semester/PPD - Programare Paralela si Distribuita/Lab/Lab1/Lab1_C++/Header/Dinamic/: Constants.h  Convolutie.h  ThreadBloc.h  ThreadOrizontala.h  ThreadVerticala.h
5th Semester/PPD - Programare Paralela si Distribuita/Lab/Lab1/Lab1_C++/Source/Dinamic/: Convolutie.cpp  ThreadBloc.cpp  ThreadOrizontala.cpp  ThreadVerticala.cpp  WriterAndReader.cpp
5th Semester/PPD - Programare Paralela si Distribuita/Lab/Lab1/Lab1_C++/Source/STATIC/: BlocStatic.cpp  OrizontalaStatic.cpp  Secvential.cpp  VerticalStatic.cpp
6th Semester/LLM - Large Language Model/: ReadMe.md
(+1203 files in other folders)
